--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
         <p>Самый дешевый и действенный vpn</p>
         <button id="buy"> Купить</button>
     </div>
-    
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </body>
 </html>
