--- a/index.html
+++ b/index.html
@@ -6,14 +6,70 @@
           content="width=divice-width, user-scalable=no, inital-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie-edge">
     <title>Shop</title>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;500&display=swap');
+
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box:
+        }
+
+        body {
+            font-family: 'Montserrat', sans-serif;
+            font-weight: 200;
+            color: var(--tg-theme-text-color);
+            background: var(--tg-theme-bg-color);
+        }
+
+        #main {
+            width: 100%;
+            padding: 20px;
+            text-align: center;
+        }
+
+        h1 {
+            margin-top: 50px;
+            margin-bottom: 10px;
+        }
+
+        img {
+            width: 70px;
+            margin: 30px auto;
+        }
+
+        p {
+            width:350px;
+            margin: 0 auto;
+        }
+
+        button {
+            border: 0;
+            border-radius: 5px;
+            margin-top: 50px;
+            height: 60px;
+            width: 200px;
+            font-size: 20px;
+            font-weight: 500;
+            cursor: pointer;
+            transition: all 500ms ease;
+            color: var(--tg-theme-button-color);
+            background: color: var(--tg-theme-button-color);
+        }
+
+        button:hover {
+            background: var(--tg-theme-secondary-bg-color);
+        }
+    </style>
 </head>
 <body>
     <div id="main">
         <h1>Покупка подписки Crash vpn</h1>
         <img src="https://tse2.mm.bing.net/th/id/OIP.dmEnuRP8hVmo6MKJMDoE9wHaD8?rs=1&pid=ImgDetMain&o=7&rm=3">
         <p>Самый дешевый и действенный vpn</p>
-        <button id="buy"> Купить</button>
+        <button id="buy"> Купить ВПН</button>
     </div>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
+
 </body>
 </html>
