--- a/index.html
+++ b/index.html
@@ -1,18 +1,25 @@
 <!doctype html>
-<html lang = "en">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
-          content="width=divice-width, user-scalable=no, inital-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie-edge">
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Shop</title>
     <style>
+        :root {
+            --tg-theme-text-color: #222;
+            --tg-theme-bg-color: #fff;
+            --tg-theme-button-color: #222;
+            --tg-theme-secondary-bg-color: #eee;
+        }
+
         @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;500&display=swap');
 
         * {
             margin: 0;
             padding: 0;
-            box-sizing: border-box:
+            box-sizing: border-box;
         }
 
         body {
@@ -54,11 +61,12 @@
             cursor: pointer;
             transition: all 500ms ease;
             color: var(--tg-theme-button-color);
-            background: color: var(--tg-theme-button-color);
+            background: var(--tg-theme-secondary-bg-color);
         }
 
         button:hover {
-            background: var(--tg-theme-secondary-bg-color);
+            background: var(--tg-theme-button-color);
+            color: var(--tg-theme-bg-color);
         }
     </style>
 </head>
@@ -70,6 +78,5 @@
         <button id="buy"> Купить ВПН</button>
     </div>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
-
 </body>
 </html>
