--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <title>Fast Food Menu</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <style>
-        body { font-family: Arial, sans-serif; background: #f7f7f7; }
+        body { font-family: Arial, sans-serif; background: #f7f7f7; margin:0; }
         .menu { display: flex; flex-wrap: wrap; gap: 16px; max-width: 400px; margin: 40px auto; }
         .item { background: #fff; border-radius: 10px; box-shadow: 0 2px 8px #0001; padding: 16px; width: 120px; text-align: center; }
         .item img { width: 48px; height: 48px; }
@@ -26,10 +27,11 @@
             font-size: 22px;
             font-weight: bold;
             cursor: pointer;
-            transition: background 0.2s;
+            transition: background 0.2s, transform 0.1s;
         }
         .counter-btn:active {
             background: #e69500;
+            transform: scale(0.92);
         }
         .counter-value {
             min-width: 28px;
@@ -47,10 +49,11 @@
             color: #fff;
             font-weight: bold;
             cursor: pointer;
-            transition: background 0.2s;
+            transition: background 0.2s, transform 0.1s;
         }
         .add-btn:active {
             background: #e69500;
+            transform: scale(0.96);
         }
         .input-block { display: flex; justify-content: center; align-items: center; gap: 8px; margin: 30px auto 0 auto; }
         .input-block input { width: 60px; padding: 6px; font-size: 18px; border-radius: 5px; border: 1px solid #ccc; text-align: center; }
@@ -66,6 +69,15 @@
             box-shadow: 0 4px 16px #0002;
             padding: 18px 16px 16px 16px;
             z-index: 100;
+            opacity: 0;
+            transform: translateY(30px) scale(0.98);
+            pointer-events: none;
+            transition: opacity 0.35s cubic-bezier(.4,1.4,.6,1), transform 0.35s cubic-bezier(.4,1.4,.6,1);
+        }
+        .cart-box.visible {
+            opacity: 1;
+            transform: translateY(0) scale(1);
+            pointer-events: auto;
         }
         .cart-title {
             font-size: 20px;
@@ -100,26 +112,119 @@
             font-size: 16px;
             font-weight: bold;
             cursor: pointer;
-        }
-        .promo-btn {
-            background: #1a8f1a;
-            color: #fff;
+            transition: background 0.2s, transform 0.1s;
         }
         .pay-btn {
             background: #ffb300;
             color: #fff;
         }
+        .pay-btn:active {
+            background: #e69500;
+            transform: scale(0.97);
+        }
+        /* --- Промокод --- */
+        .promo-input-block {
+            display: flex;
+            gap: 8px;
+            margin-bottom: 8px;
+            align-items: center;
+        }
+        .promo-input-block input,
+        .promo-input-block .promo-btn-apply {
+            height: 40px;
+            box-sizing: border-box;
+        }
+        .promo-input-block input {
+            flex: 0 1 65%;
+            min-width: 110px;
+            max-width: 200px;
+            padding: 7px 10px;
+            font-size: 16px;
+            border-radius: 5px;
+            border: 1px solid #ccc;
+        }
+        .promo-input-block input:focus {
+            border-color: #1a8f1a;
+            outline: none;
+        }
+        .promo-input-block .promo-btn-apply {
+            flex: 0 1 35%;
+            width: 0;
+            background: #1a8f1a;
+            color: #fff;
+            border: none;
+            border-radius: 7px;
+            padding: 0;
+            font-size: 15px;
+            min-width: 44px;
+            max-width: 90px;
+            font-weight: bold;
+            box-shadow: 0 2px 8px #0001;
+            cursor: pointer;
+            line-height: 1;
+            transition: background 0.2s, box-shadow 0.2s, transform 0.1s;
+            text-align: center;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
+        .promo-input-block .promo-btn-apply:active {
+            background: #146d13;
+            box-shadow: 0 1px 4px #0002;
+            transform: scale(1.04);
+        }
+        .promo-message {
+            color: #d32f2f;
+            font-size: 14px;
+            margin-bottom: 8px;
+            text-align: center;
+        }
+        .promo-message.success {
+            color: #1a8f1a;
+        }
+        /* Кнопка для показа промокодов */
+        #togglePromoList {
+            position: fixed;
+            right: 24px;
+            bottom: 320px;
+            z-index: 101;
+            background: #1a8f1a;
+            color: #fff;
+            border: none;
+            border-radius: 8px;
+            padding: 8px 18px;
+            font-size: 15px;
+            font-weight: bold;
+            cursor: pointer;
+            box-shadow: 0 2px 8px #0002;
+            transition: background 0.2s, transform 0.1s;
+        }
+        #togglePromoList:active {
+            background: #146d13;
+            transform: scale(0.97);
+        }
         /* Список промокодов */
         .promo-list-box {
             position: fixed;
             right: 24px;
-            bottom: 320px;
+            bottom: 370px;
             width: 280px;
             background: #fff;
             border-radius: 12px;
             box-shadow: 0 4px 16px #0002;
             padding: 14px 16px 14px 16px;
-            z-index: 99;
+            z-index: 102;
+            max-height: 180px;
+            overflow-y: auto;
+            display: none;
+            opacity: 0;
+            transform: translateY(20px) scale(0.98);
+            transition: opacity 0.35s cubic-bezier(.4,1.4,.6,1), transform 0.35s cubic-bezier(.4,1.4,.6,1);
+        }
+        .promo-list-box.visible {
+            display: block;
+            opacity: 1;
+            transform: translateY(0) scale(1);
         }
         .promo-list-title {
             font-size: 18px;
@@ -133,20 +238,59 @@
         .promo-list li {
             margin-bottom: 4px;
         }
+        @media (max-width: 600px) {
+            .cart-box, .promo-list-box, #togglePromoList {
+                right: 8px;
+            }
+            .cart-box, .promo-list-box {
+                width: 96vw;
+                min-width: 0;
+                max-width: 99vw;
+            }
+            .menu {
+                gap: 8px;
+                max-width: 99vw;
+            }
+            .item {
+                width: 44vw;
+                min-width: 140px;
+                max-width: 180px;
+                padding: 10px;
+            }
+            .promo-input-block input,
+            .promo-input-block .promo-btn-apply {
+                height: 34px;
+            }
+            .promo-input-block input {
+                font-size: 14px;
+                min-width: 70px;
+            }
+            .promo-input-block .promo-btn-apply {
+                font-size: 14px;
+                min-width: 38px;
+                max-width: 70px;
+            }
+        }
     </style>
 </head>
 <body>
     <div class="input-block">
-        <input type="number" id="userNumber" placeholder="Число">
+        <input type="number" id="userNumber" placeholder="Число" />
         <button onclick="updateNumberLot()">Изменить лот-число</button>
     </div>
     <div class="menu" id="menu"></div>
-    <!-- Список промокодов -->
-    <div class="promo-list-box">
+
+    <!-- Кнопка для показа/скрытия промокодов -->
+    <button id="togglePromoList">Показать промокоды</button>
+
+    <!-- Список промокодов, скрыт по умолчанию -->
+    <div class="promo-list-box" id="promoListBox">
         <div class="promo-list-title">Доступные промокоды:</div>
         <ul class="promo-list" id="promoList"></ul>
     </div>
-    <div class="cart-box" id="cartBox" style="display:none"></div>
+
+    <div class="cart-box" id="cartBox"></div>
+
     <script>
         // Промокоды: код и описание
         const promoCodes = [
@@ -155,19 +299,19 @@
             { code: 'WELCOME', desc: 'Скидка 20 рублей для новых клиентов', discount: 20 }
         ];
 
-        // Лот-число всегда последний в массиве!
         const menu = [
-            { name: 'Бургер', price: 250, img: '🍔' },
-            { name: 'Фри', price: 150, img: '🍟' },
-            { name: 'Хотдог', price: 200, img: '🌭' },
-            { name: 'Тако', price: 400, img: '🌮' },
-            { name: 'Пицца', price: 800, img: '🍕' },
+            { name: 'Бургер', price: 4.99, img: '🍔' },
+            { name: 'Фри', price: 1.49, img: '🍟' },
+            { name: 'Хотдог', price: 3.49, img: '🌭' },
+            { name: 'Тако', price: 3.99, img: '🌮' },
+            { name: 'Пицца', price: 7.99, img: '🍕' },
             { name: '7', img: '🔢', isNumberLot: true }
         ];
 
         const counters = {}; // { idx: count }
         const cart = {};
         let appliedPromo = null;
+        let promoMessage = '';
 
         function getPrice(item) {
             if (item.isNumberLot && !isNaN(item.name)) {
@@ -261,8 +405,10 @@
                 .filter(idx => cart[idx] > 0)
                 .map(idx => ({...menu[idx], count: cart[idx], idx: Number(idx)}));
             if (items.length === 0) {
-                cartBox.style.display = 'none';
+                cartBox.classList.remove('visible');
                 appliedPromo = null;
+                promoMessage = '';
+                cartBox.innerHTML = '';
                 return;
             }
             let total = 0;
@@ -281,7 +427,6 @@
             let discount = 0;
             if (appliedPromo) {
                 if (appliedPromo.discount < 1) {
-                    // Процентная скидка
                     discount = Math.floor(total * appliedPromo.discount);
                     promoText = `Промокод: ${appliedPromo.code} (-${discount} руб.)`;
                 } else if (appliedPromo.min && total >= appliedPromo.min) {
@@ -301,22 +446,33 @@
                 <div class="cart-list">${listHtml}</div>
                 <div class="cart-total">Итого: ${totalWithDiscount} рублей</div>
                 ${promoText ? `<div style="color:#1a8f1a; font-size:14px; margin-bottom:8px;">${promoText}</div>` : ''}
-                <button class="cart-btn promo-btn" onclick="showPromo()">Промокод</button>
+                <form class="promo-input-block" onsubmit="applyPromo(event)">
+                    <input type="text" id="promoInput" placeholder="Промокод" autocomplete="off" value="${appliedPromo ? appliedPromo.code : ''}">
+                    <button type="submit" class="promo-btn-apply">Применить</button>
+                </form>
+                ${promoMessage ? `<div class="promo-message${promoMessage === 'Промокод применён!' ? ' success' : ''}">${promoMessage}</div>` : ''}
                 <button class="cart-btn pay-btn" onclick="payOrder()">Оплатить</button>
             `;
-            cartBox.style.display = 'block';
+            cartBox.classList.add('visible');
         }
 
-        window.showPromo = function() {
-            const code = prompt('Введите промокод:');
-            if (!code) return;
-            const promo = promoCodes.find(p => p.code.toLowerCase() === code.trim().toLowerCase());
+        // Применение промокода через форму
+        window.applyPromo = function(event) {
+            event.preventDefault();
+            const input = document.getElementById('promoInput');
+            const code = input.value.trim();
+            if (!code) {
+                promoMessage = 'Введите промокод!';
+                renderCart();
+                return;
+            }
+            const promo = promoCodes.find(p => p.code.toLowerCase() === code.toLowerCase());
             if (promo) {
                 appliedPromo = promo;
-                alert('Промокод применён!');
+                promoMessage = 'Промокод применён!';
             } else {
                 appliedPromo = null;
-                alert('Промокод не найден.');
+                promoMessage = 'Промокод не найден.';
             }
             renderCart();
         }
@@ -332,6 +488,20 @@
                 `<li><b>${p.code}</b> — ${p.desc}</li>`
             ).join('');
         }
+
+        // Показать/скрыть список промокодов с анимацией
+        document.getElementById('togglePromoList').onclick = function() {
+            const box = document.getElementById('promoListBox');
+            if (box.classList.contains('visible')) {
+                box.classList.remove('visible');
+                setTimeout(() => { box.style.display = 'none'; }, 350);
+                this.textContent = 'Показать промокоды';
+            } else {
+                box.style.display = 'block';
+                setTimeout(() => { box.classList.add('visible'); }, 10);
+                this.textContent = 'Скрыть промокоды';
+            }
+        };
 
         renderPromoList();
         renderMenu();
